# Maestro-AI-Agentic-CRISP-DM-Orchestration

./: .env.example  .gitignore  AUTHORS.md  CLAUDE.md  DEBUGGING.md  README.md  plan.md  project_manager.md  pyproject.toml  requirements.txt  run-all.ps1
configs/: disaster_tweets.yaml  house_prices.yaml  titanic.yaml  titanic_loopdemo.yaml
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
dashboard/src/: App.tsx  index.css  main.tsx
dashboard/src/components/: CommTurn.tsx  ConclusionsPanel.tsx  (+11 more)
docs/: ARCHITECTURE.md  Optimisation_Research.md  PAPER.md  phase1-implementation.md  plan-v2-crewai-over-scaffold.md  plan.md
docs/prompts/: maads-improvement-from-run-artifacts.md
knowledge/: crisp-dm-excerpt.md  disaster_tweets.md  disaster_tweets_experience.md  house_prices.md  house_prices_experience.md  ml-problem-approach-notes.md  titanic.md  titanic_experience.md
skills/crisp-dm-loops/: SKILL.md
skills/developer-debug-rubric/: SKILL.md
skills/json-output-contract/: SKILL.md
skills/kaggle-submission-contract/: SKILL.md
skills/leakage-cv-discipline/: SKILL.md
skills/nlp-prep/: SKILL.md
skills/tabular-prep/: SKILL.md
src/configs/: house_prices.yaml
src/crew_starter/: crew.py  main.py
src/maads/: __init__.py  __main__.py  agents.py  artifact_config.py  artifact_paths.py  artifact_runs.py  artifacts_render.py  baselines.py  codegen.py  conclusions.py  config.py  crew.py  crew_base.py  crew_tools.py  data_utils.py  debug.py  deltas.py  knowledge_setup.py  live_summary.py  llm.py  model_capabilities.py  model_catalog.py  model_info.py  orchestrator.py  outcome.py  output_contracts.py  paths.py  progress.py  prompt_context.py  prompts.py  rag.py  run.py  run_status.py  shutdown.py  state.py  success_criterion.py  test_capabilities.py  test_codegen.py  test_debug.py  test_flow_happy_path.py  (+13 more)
tests/: conftest.py  test_agents_contracts.py  test_artifact_runs.py  test_capabilities.py  test_codegen.py  test_conclusions.py  test_crew_json.py  test_crew_llm.py  test_crew_text_llm.py  test_crewai_env.py  test_dashboard_store.py  test_debug.py  test_evaluation_bundle.py  test_execution_analysis_report.py  test_execution_authority.py  test_flow_happy_path.py  test_handoff.py  test_knowledge_setup.py  test_loop_signals.py  test_md_paths.py  test_model_capabilities.py  test_model_info.py  test_orchestrator_advance.py  test_output_contracts.py  test_path_coverage.py  test_phase_runner.py  test_prompt_context.py  test_prompt_loader.py  test_rag.py  test_report_format.py  test_run_status.py  test_semantic_loop_a.py  test_shutdown.py  test_smoke.py  test_storyteller.py  test_submission.py  test_success_criterion.py  test_token_budget.py  test_tools.py  test_validators.py  (+1 more)
tests/dashboard/: test_aggregators.py  test_artifact_serve.py  test_rag_view.py
tests/fixtures/: assess_src.py  titanic_exec.py
tests/observability/: test_codegen_trace.py  test_llm_communications.py  test_trace.py
(+124 files in other folders)
