[project]
name = "maads"
version = "0.1.0"
description = "Multi-Agent System for Automated Data Science — CRISP-DM over CrewAI"
requires-python = ">=3.10,<3.14"
dependencies = [
    # scaffold core
    "python-dotenv>=1.0",
    "openai>=1.0",
    "tiktoken>=0.5",
    "pydantic>=2.0",
    "PyYAML>=6.0",
    # framework (>=1.10.1 required by openinference-instrumentation-crewai)
    "crewai>=1.10.1,<2.0",
    "crewai-tools>=1.10.1,<2.0",
    "ollama>=0.4",  # CrewAI Knowledge embeddings when EMBEDDINGS_PROVIDER=ollama
    # ML stack (Phase 1 fixed-baseline modeling)
    "pandas>=2.1",
    "scikit-learn>=1.4",
    "pyarrow>=15.0",
    "matplotlib>=3.8",
    "joblib>=1.3",
    # data
    "kaggle>=1.6",
    # observability
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "openinference-instrumentation-crewai>=0.1.10",
    "ipykernel>=7.3.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "coverage>=7.4"]
dashboard = ["fastapi>=0.115", "uvicorn[standard]>=0.30"]

[project.scripts]
maads = "maads.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# src layout: the importable package is src/maads.
[tool.setuptools.packages.find]
where = ["src"]
include = ["maads*"]

# Ship the agent/task config and backstory prompts as package data (loaded via
# importlib.resources, so they must be present in installed wheels too).
[tool.setuptools.package-data]
maads = ["config/*.yaml", "prompts/identities/backstories/*.md", "crews/**/config/tasks.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.coverage.run]
source = ["maads"]
omit = [
    "*/testing/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
